--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,14 @@
+---
+import Nav from '@components/Nav.astro'
+import '@styles/global.css'
+
+interface Props {
+  title: string
+}
+
+const { title } = Astro.props
+---
+
 <!doctype html>
 <html lang='en'>
   <head>
@@ -5,9 +16,12 @@
     <meta name='viewport' content='width=device-width' />
     <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
     <meta name='generator' content={Astro.generator} />
-    <title>Astro Basics</title>
+    <title>{title}</title>
   </head>
-  <body class='h-dvh w-full'>
+  <body class='h-dvh w-full bg-slate-900 text-white'>
+    <header>
+      <Nav />
+    </header>
     <slot />
   </body>
 </html>
