--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,19 @@
 ---
-import Welcome from '@components/Welcome.astro'
 import Layout from '@layouts/Layout.astro'
-import '@styles/global.css'
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout>
-  <Welcome />
+<Layout title='First blog with Astro'>
+  <main>
+    <a href='/'>Home</a>
+    <a href='/about'>About</a>
+    <a href='/blog'>blog</a>
+    <h1>Welcome to Astro</h1>
+    <p>
+      Astro is a new kind of static site builder that delivers lightning-fast
+      performance with a modern developer experience.
+    </p>
+  </main>
 </Layout>
