--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -8,4 +8,15 @@ import Layout from '@layouts/Layout.astro'
     Welcome to my blog! I'm excited to share my thoughts and experiences with
     you.
   </p>
+  <ul>
+    <li>
+      <a href='/posts/post-1'>Post 1</a>
+    </li>
+    <li>
+      <a href='/posts/post-2/'>Post 2</a>
+    </li>
+    <li>
+      <a href='/posts/post-3/'>Post 3</a>
+    </li>
+  </ul>
 </Layout>
