--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -37,4 +37,8 @@ const skills = ['HTML', 'CSS', 'JavaScript', 'React', 'Astro', 'Writing Docs']
     color: purple;
     font-size: 4rem;
   }
+  .skill {
+    color: green;
+    font-weight: bold;
+  }
 </style>
