--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,7 +10,7 @@ const identity = {
 
 const skills = ['HTML', 'CSS', 'JavaScript', 'React', 'Astro', 'Writing Docs']
 
-const skillColor = 'navy'
+const skillColor = 'green'
 ---
 
 <Layout title='About Astro'>
