--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -2,6 +2,7 @@
 import { ClientRouter } from 'astro:transitions'
 import Header from '@components/Header.astro'
 import '@styles/global.css'
+import Footer from '@components/Footer.astro'
 
 interface Props {
   title: string
@@ -25,5 +26,6 @@ const { title } = Astro.props
     <main class='flex-1 p-4'>
       <slot />
     </main>
+    <Footer />
   </body>
 </html>
