--- a/src/components/NavLinks.astro
+++ b/src/components/NavLinks.astro
@@ -8,7 +8,7 @@ const LINKS = [
 const { pathname } = Astro.url
 ---
 
-<ul class='flex gap-1'>
+<ul class='flex gap-1 nav-links'>
   {
     LINKS.map(link => {
       return (
@@ -46,3 +46,46 @@ const { pathname } = Astro.url
     })
   })
 </script>
+
+<style>
+  .nav-links {
+    width: 100%;
+    top: 5rem;
+    left: 48px;
+    background-color: #ff9776;
+    display: none;
+    margin: 0;
+  }
+
+  .nav-links a {
+    text-align: center;
+    padding: 10px 0;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-transform: capitalize;
+  }
+
+  .nav-links a:hover,
+  .nav-links a:focus {
+    background-color: #ff9776;
+  }
+
+  .expanded {
+    display: unset;
+  }
+
+  @media screen and (min-width: 636px) {
+    .nav-links {
+      margin-left: 5em;
+      display: block;
+      width: auto;
+      background: none;
+    }
+
+    .nav-links a {
+      display: inline-block;
+      padding: 15px 20px;
+    }
+  }
+</style>
