--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -8,4 +8,24 @@ import NavLinks from '@components/NavLinks.astro'
     <AstroLogo class='size-7' />
   </a>
   <NavLinks />
+  <div id='burger-btn' class='flex flex-col gap-1'>
+    <div class='w-5 h-[2px] bg-white'></div>
+    <div class='w-5 h-[2px] bg-white'></div>
+    <div class='w-5 h-[2px] bg-white'></div>
+  </div>
 </nav>
+
+<script>
+  const navBar = document.querySelector('#nav-bar')
+  const burgerButton = document.querySelector('#burger-btn')
+
+  burgerButton?.addEventListener('click', () => {
+    navBar?.classList.toggle('expand')
+  })
+</script>
+<style is:global>
+  .expand {
+    display: flex;
+    flex-direction: column;
+  }
+</style>
