fixing burger button for mediums screen

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -8,7 +8,7 @@ import NavLinks from '@components/NavLinks.astro'
     <AstroLogo class='size-7' />
   </a>
   <NavLinks />
-  <div id='burger-btn' class='flex flex-col gap-1'>
+  <div id='burger-btn' class='flex flex-col gap-1 md:hidden'>
     <div class='w-5 h-[2px] bg-white'></div>
     <div class='w-5 h-[2px] bg-white'></div>
     <div class='w-5 h-[2px] bg-white'></div>
