style: update footer styles for improved appearance

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,7 +15,7 @@ const PLATFORMS = [
 ]
 ---
 
-<footer>
+<footer class='p-4 bg-slate-800 text-white'>
   <p>
     {
       PLATFORMS.map(({ name, username }) => (
@@ -29,6 +29,5 @@ const PLATFORMS = [
   footer {
     display: flex;
     gap: 1rem;
-    margin-top: 2rem;
   }
 </style>
