style: adjust padding for social links for better usability

--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -11,9 +11,8 @@ const { platform, username } = Astro.props
 
 <style>
   a {
-    padding: 0.5rem 1rem;
+    padding: 5px 10px;
     color: white;
     background-color: #4c1d95;
-    text-decoration: none;
   }
 </style>
