refactor: update Hamburger component styles for improved positioning and visibility

--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -9,20 +9,10 @@
 </div>
 
 <style>
-  .hamburger {
-    display: flex;
-    flex-direction: column;
-    cursor: pointer;
-    gap: 5px;
-
-    @media (width >= 48rem) {
-      display: none;
-    }
-  }
-
-  .line {
-    width: 30px;
-    height: 4px;
-    background-color: white;
+  hamburger-button {
+    position: absolute;
+    top: 1.5rem;
+    lef: 0;
+    z-index: 10;
   }
 </style>
