refactor: rename Nav component to Navigation for consistency

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
-import Nav from '@components/Nav.astro'
+import Navigation from '@components/Navigation.astro'
 ---
 
 <header class='bg-slate-800'>
-  <Nav />
+  <Navigation />
 </header>
