--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -2,17 +2,25 @@
 
 ---
 
-<div id='hamburger-button' class='hamburger'>
+<div id='hamburger-button' class='hamburger-button cursor-pointer'>
   <span class='line rounded-lg'></span>
   <span class='line rounded-lg'></span>
   <span class='line rounded-lg'></span>
 </div>
 
 <style>
-  hamburger-button {
-    position: absolute;
-    top: 1.5rem;
-    lef: 0;
-    z-index: 10;
+  .hamburger-button {
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+    width: 24px;
+
+    @media (width >= 768px) {
+      display: none;
+    }
+  }
+  .line {
+    height: 4px;
+    background-color: #fff;
   }
 </style>
