--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -5,10 +5,10 @@ import Hamburger from './Hamburger.astro'
 ---
 
 <nav
-  class='flex flex-col md:flex-row items-center justify-between border-b-0 md:border-b-2 border-slate-500/30'
+  class='flex flex-col md:flex-row items-center justify-between md:px-4 border-b-0 md:border-b-2 border-slate-500/30'
 >
   <div
-    class='flex items-center gap-3 w-full justify-between px-4 border-b-2 border-slate-500/30 md:border-b-0'
+    class='flex items-center gap-3 w-full justify-between px-4 md:px-0 border-b-2 border-slate-500/30 md:border-b-0'
   >
     <a href='/' class='py-4' data-link='/'>
       <AstroLogo class='size-7' />
@@ -24,7 +24,7 @@ import Hamburger from './Hamburger.astro'
     const navBar = document.querySelector('#nav-bar')
 
     hamburgerButton?.addEventListener('click', () => {
-      navBar?.classList.toggle('hidden-navbar')
+      navBar?.classList.toggle('expanded-navbar')
     })
   })
 </script>
