--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,7 +1,7 @@
 ---
 import AstroLogo from '@icons/AstroLogo.astro'
 import NavLinks from '@components/NavLinks.astro'
-import Hamburger from './Hamburger.astro'
+import Hamburger from '@components/Hamburger.astro'
 ---
 
 <nav
