feat: update Props interface in MarkdownPostLayout to use generic type

--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,7 +1,7 @@
 ---
 import type { MarkdownLayoutProps } from 'astro'
 
-interface Props extends MarkdownLayoutProps {
+interface Props extends MarkdownLayoutProps<{}> {
   title: string
   author: string
 }
