feat: replace Layout component with BaseLayout in index page for improved structure

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
-import Layout from '@layouts/Layout.astro'
+import BaseLayout from '@layouts/BaseLayout.astro'
 ---
 
-<Layout title='First blog with Astro'>
+<BaseLayout title='First blog with Astro'>
   <h1>Welcome to Astro</h1>
   <p>
     Astro is a new kind of static site builder that delivers lightning-fast
     performance with a modern developer experience.
   </p>
-</Layout>
+</BaseLayout>
