--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,4 +1,5 @@
 ---
+import BlogCard from '@components/BlogCard.astro'
 import type { Post } from '@definitions/post'
 import BaseLayout from '@layouts/BaseLayout.astro'
 import type { MarkdownLayoutProps } from 'astro'
@@ -32,13 +33,7 @@ const { posts } = Astro.props
 
 <BaseLayout title={tag}>
   <p>Posts tagged with {tag}</p>
-  <ul>
-    {
-      posts.map(post => (
-        <li>
-          <a href={post.url}>{post.frontmatter.title}</a>
-        </li>
-      ))
-    }
-  </ul>
+  <section class='flex gap-2 mt-5 flex-wrap justify-center md:justify-evenly'>
+    {posts.map(post => <BlogCard post={post} />)}
+  </section>
 </BaseLayout>
