feat: update TagsList component to use a new tag URL structure and add custom link styling

--- a/src/components/TagsList.astro
+++ b/src/components/TagsList.astro
@@ -5,12 +5,18 @@ interface Props {
 const { tags } = Astro.props
 ---
 
-<div class='flex flex-wrap gap-2'>
+<div class='flex flex-wrap self-start gap-2'>
   {
     tags.map(tag => (
       <p class='capitalize rounded-full px-2.5 py-0.5 bg-slate-400/20 text-xs font-semibold inline-flex items-center justify-center'>
-        <a href={`/${tag}`}>{tag}</a>
+        <a href={`/tags/${tag}`}>{tag}</a>
       </p>
     ))
   }
 </div>
+
+<style>
+  a {
+    text-decoration: transparent;
+  }
+</style>
