--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -13,7 +13,9 @@ const {
 ---
 
 <BaseLayout title={title}>
-  <div class='container mx-auto max-w-4xl px-4 py-8'>
+  <div
+    class='prose lg:prose-xl dark:prose-invert container mx-auto max-w-4xl px-4 py-8'
+  >
     <TagsList tags={tags} />
     <h1>{title}</h1>
     <p>
