--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -13,9 +13,7 @@ const {
 ---
 
 <BaseLayout title={title}>
-  <div
-    class='prose lg:prose-xl dark:prose-invert container mx-auto max-w-4xl px-4 py-8'
-  >
+  <div>
     <TagsList tags={tags} />
     <h1>{title}</h1>
     <p>
@@ -30,6 +28,10 @@ const {
       src={image.url}
       alt={image.alt}
     />
-    <slot />
+    <div
+      class='prose lg:prose-xl dark:prose-invert container mx-auto max-w-4xl px-4 py-8'
+    >
+      <slot />
+    </div>
   </div>
 </BaseLayout>
