--- a/src/components/TagsList.astro
+++ b/src/components/TagsList.astro
@@ -8,7 +8,7 @@ const { tags } = Astro.props
 <div class='flex flex-wrap self-start gap-2'>
   {
     tags.map(tag => (
-      <p class='capitalize rounded-full px-2.5 py-0.5 bg-slate-400/20 text-xs font-semibold inline-flex items-center justify-center'>
+      <p class='capitalize rounded-full px-2.5 py-0.5 bg-secondary text-xs font-semibold inline-flex items-center justify-center'>
         <a href={`/tags/${tag}`}>{tag}</a>
       </p>
     ))
