--- a/src/components/NavLinks.astro
+++ b/src/components/NavLinks.astro
@@ -11,7 +11,7 @@ const { pathname } = Astro.url
 
 <ul
   id='nav-bar'
-  class='md:gap-1 w-full md:w-fit hidden md:flex flex-col md:flex-row p-4 md:p-0 border-b-2 border-slate-500/30 md:border-b-0'
+  class='md:gap-1 hidden md:flex flex-col md:flex-row p-4 md:p-0 border-b-2 border-slate-500/30 md:border-b-0'
 >
   {
     LINKS.map(link => {
