--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -21,9 +21,9 @@ const { title } = Astro.props
     <title>{title}</title>
     <ClientRouter />
   </head>
-  <body class='min-h-dvh w-full flex flex-col bg-slate-900 text-white'>
+  <body class='min-h-dvh w-full flex flex-col dark:bg-gray-950 text-white'>
     <Header />
-    <main class='flex-1 p-4'>
+    <main class='flex-1 p-4 container'>
       <slot />
     </main>
     <Footer />
