--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -6,8 +6,8 @@ interface Props {
 const { tag } = Astro.props
 ---
 
-<p
-  class='capitalize rounded-full px-2.5 py-0.5 bg-secondary text-xs font-semibold inline-flex items-center justify-center'
+<span
+  class='capitalize rounded-full px-3 py-1 bg-pink-500/10 text-pink-400 text-xs font-medium inline-block'
 >
-  <a href={`/tags/${tag}`}>{tag}</a>
-</p>
+  {tag}
+</span>
