--- a/src/components/NavLinks.astro
+++ b/src/components/NavLinks.astro
@@ -16,13 +16,13 @@ const { pathname } = Astro.url
   {
     LINKS.map(link => {
       return (
-        <li class=' rounded-sm inline-flex items-center md:justify-center hover:bg-slate-500/30 cursor-pointer transition-colors duration-200'>
+        <li class='inline-flex items-center md:justify-center text-gray-200 hover:text-pink-400 cursor-pointer transition-colors duration-200'>
           <a
             data-link={link.href}
             href={link.href}
             class:list={[
               {
-                'text-blue-500': pathname === link.href,
+                'text-pink-500': pathname === link.href,
               },
               'w-full px-2 py-1',
             ]}
