--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -21,9 +21,11 @@ const { title } = Astro.props
     <title>{title}</title>
     <ClientRouter />
   </head>
-  <body class='min-h-dvh w-full flex flex-col dark:bg-gray-950 text-white'>
+  <body
+    class='min-h-dvh w-full flex flex-col dark:bg-gray-950 text-white antialiased'
+  >
     <Header />
-    <main class='flex-1 p-4 container'>
+    <main class='flex-1 container mx-auto'>
       <slot />
     </main>
     <Footer />
