refactor: comment out blog post mapping for future adjustments

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -16,6 +16,8 @@ const allBlogs = Object.values(
     you.
   </p>
   <section class='flex gap-2 mt-5 flex-wrap justify-center md:justify-evenly'>
-    {allBlogs.map(post => <BlogCard post={post} />)}
+    {
+      //allBlogs.map(post => <BlogCard post={post} />)}
+    }
   </section>
 </BaseLayout>
